# part-1

./: CMakeLists.txt  README.md  build.sh
cmake/: gnuarm.cmake  utility.cmake
scripts/: build_arch.sh
src/: CMakeLists.txt
src/application/: CMakeLists.txt  main.cpp
src/drivers/cpu/: CMakeLists.txt
src/drivers/cpu/include/: cpu.h
src/drivers/cpu/src/: cpu.cpp
src/libs/: CMakeLists.txt  stm32cubef4.cmake
src/libs/custom/: STM32F401CCU6.ld  stm32f4xx_hal_conf.h
